documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32NET.CS


        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCBranchEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCBranchEnd(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCallFrame@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCCallFrame(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCCheckMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCCheckMsg(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCConfig(UInt32 configflags, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCConfigEx(UInt32 configflags, Int32 cmdcountval, Int32 cyccountval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoAgain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoAgain(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoGap@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoGap(Int32 gapval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoGoto@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoGoto(Int32 destindex, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoHalt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoHalt(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoInt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoInt(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoMsg@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoMsg(Int32 busab, UInt16 cwdval, ref UInt16 datavals, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoResv@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoResv(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoRTRT@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoRTRT(Int32 busab, UInt16 cwd1val, UInt16 cwd2val, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCDoSelfTest@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCDoSelfTest(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCFrameEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCFrameEnd(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCFrameStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCFrameStart(Int32 timeval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCMsgBranch@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCMsgBranch(Int32 index, Int32 destindex, Int32 condition, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCMsgRetry@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_BCMsgRetry(Int32 index, Int32 retries, Int32 condition, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCRdData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCRdData(Int32 index, ref UInt16 data, UInt16 count, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCRdSWD1@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCRdSWD1(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCRdSWD2@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCRdSWD2(Int32 index, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_BCWrData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_BCWrData(Int32 index, ref UInt16 data, UInt16 count, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_CloseCard@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_CloseCard(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_GetBitFld@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_GetBitFld(UInt16 oldvalue, Int32 startbit, Int32 endbit);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_INTInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_INTRd(Int32 index, ref UInt16 typeval, ref UInt16 eventval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTUninstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_INTUninstall(IntPtr hevent, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTUnmask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_INTUnmask(UInt16 maskval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_MONConfig(UInt32 configflags, UInt16 moncount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONCount@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_MONCount(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_MONRd(UInt16 index, ref UInt16 blockinfo, ref UInt16 datawords, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONTermAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_MONTermAddr(UInt16 termaddr, Int32 enableflag, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_OpenCard@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_OpenCard(Int32 card_number);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PackCWD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_PackCWD(Int32 taval, Int32 trval, Int32 saval, Int32 wcval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PeekMem@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_PeekMem(UInt16 wordoffset, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PokeMem@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_PokeMem(UInt16 data, UInt16 wordoffset, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PutBitFld@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_PutBitFld(UInt16 oldvalue, UInt16 newfld, Int32 startbit, Int32 endbit);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RdPort@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RdPort(UInt16 register, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Reset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_Reset(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Restart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_Restart(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTAccessed(UInt16 cwd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_RTConfig(UInt32 configflags, UInt16 rtaddr, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTCountList@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_RTCountList(UInt16 cwd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTIllegal@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_RTIllegal(UInt16 cwd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTInitList@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTInitList(UInt16 cwd, Int32 count, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTInt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_RTInt(UInt16 cwd, UInt16 value, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTMONConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_RTMONConfig(UInt32 configflags, UInt16 rtaddr, UInt16 moncount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTRdData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTRdData(UInt16 cwd, ref UInt16 data, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTRdDataEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTRdDataEx(UInt16 cwd, ref UInt16 infodata, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTRdList@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTRdList(UInt16 cwd, UInt16 index, ref UInt16 infodata, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTRstList@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTRstList(UInt16 cwd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTWrData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTWrData(UInt16 cwd, ref UInt16 data, UInt32 handleval);
